fix Node CI Workflow

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -22,5 +22,5 @@ jobs:
       - run: npm audit fix
       - run: npm ls
       - run: npm fund
-      - run: npm test
+      - run: npm run start
       
